# Committer

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  appimage-builder.yml  modules.txt  snapcraft.yaml
include/: colors.hpp  config.hpp  curl_request.hpp  default_prompt.hpp  git_utils.hpp  llm_backend.hpp  spinner.hpp  statistics.hpp
resources/: commit.desktop
scripts/: build-dev.sh  build.sh  package.sh  package_snap.sh
src/: config.cpp  default_prompt.cpp  git_utils.cpp  main.cpp  spinner.cpp  statistics.cpp
src/backends/: openrouter_backend.cpp  zen_backend.cpp
